// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Projects renders correctly with a single item 1`] = `
.c0 {
  padding-top: 6rem;
  padding-bottom: 6rem;
}

.c1 {
  display: grid;
  position: relative;
  min-height: auto;
  width: 100%;
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  column-gap: calc(24px);
}

.c1 >* {
  grid-column: 2/auto;
}

.c9 {
  display: flex;
  gap: 0.5rem;
  flex-wrap: wrap;
  margin-bottom: 1.5rem;
}

.c11 {
  color: #eebbc3;
  text-decoration: none;
  line-height: 1;
  transition: color 0.2s ease-in-out;
}

.c11:hover {
  color: #eebbc3;
}

.c11:focus {
  outline: 2px solid #eebbc3;
  outline-offset: 2px;
}

.c7 {
  color: #b8c1ec;
  font-size: 0.875rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c2 {
  font-size: 0.75rem;
  letter-spacing: 0.2em;
  text-transform: uppercase;
  color: #eebbc3;
  margin: 0 0 1.25rem;
}

.c3 {
  font-family: "Rainier",sans-serif;
  font-size: 2.5rem;
  font-weight: 700;
  color: #fffffe;
  line-height: 1.1;
  margin: 0 0 3rem;
  max-width: 600px;
}

.c4 {
  display: grid;
  grid-template-columns: 1fr;
  gap: 1.5rem;
}

.c5 {
  display: flex;
  flex-direction: column;
  padding: 2rem;
  border: 1px solid #b8c1ec;
  border-radius: 10px;
  transition: border-color 0.2s ease;
}

.c5:hover {
  border-color: #eebbc3;
}

.c6 {
  font-family: "Rainier",sans-serif;
  font-size: 1.25rem;
  font-weight: 700;
  color: #fffffe;
  margin: 0 0 0.75rem;
}

.c8 {
  margin-bottom: 1.5rem;
  flex: 1;
}

.c10 {
  font-size: 0.75rem;
  padding: 0.25rem 0.625rem;
  border: 1px solid #b8c1ec;
  color: #b8c1ec;
}

@media (min-width: 600px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
    column-gap: calc(24px);
  }
}

@media (min-width: 900px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
    column-gap: calc(36px);
  }
}

@media (min-width: 1200px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
    column-gap: calc(81px);
  }
}

@media (min-width: 1536px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
    column-gap: calc(121.5px);
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c3 {
    font-size: 3.5rem;
  }
}

@media (min-width: 900px) {
  .c4 {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media (min-width: 1536px) {
  .c4 {
    grid-template-columns: repeat(3, 1fr);
  }
}

<div>
  <section
    class="c0"
  >
    <section
      class="c1"
    >
      <p
        class="c2"
      >
        Projects
      </p>
      <h2
        class="c3"
      >
        What I've built
      </h2>
      <div
        class="c4"
      >
        <article
          class="c5"
        >
          <h3
            class="c6"
          >
            Petite Revery
          </h3>
          <p
            class="c7 c8"
            variant="small"
          >
            High-end fashion ecommerce built on Next.js and Shopify Storefront API. Custom product configurator, size guides, and a fully bespoke checkout experience.
          </p>
          <div
            class="c9"
          >
            <span
              class="c10"
            >
              Next.js
            </span>
            <span
              class="c10"
            >
              TypeScript
            </span>
            <span
              class="c10"
            >
              Shopify
            </span>
            <span
              class="c10"
            >
              styled-components
            </span>
          </div>
          <a
            aria-label="View project →"
            class="c11"
            href="https://petiterevery.com"
            rel="noopener noreferrer"
            tabindex="0"
            target="_blank"
          >
            View project →
          </a>
        </article>
        <article
          class="c5"
        >
          <h3
            class="c6"
          >
            7mesh Industries
          </h3>
          <p
            class="c7 c8"
            variant="small"
          >
            Performance cycling apparel brand. Headless Shopify storefront with custom collection filtering, Algolia search, and Storybook component library.
          </p>
          <div
            class="c9"
          >
            <span
              class="c10"
            >
              Next.js
            </span>
            <span
              class="c10"
            >
              TypeScript
            </span>
            <span
              class="c10"
            >
              Shopify
            </span>
            <span
              class="c10"
            >
              Algolia
            </span>
            <span
              class="c10"
            >
              Storybook
            </span>
          </div>
          <a
            aria-label="View project →"
            class="c11"
            href="https://7mesh.com"
            rel="noopener noreferrer"
            tabindex="0"
            target="_blank"
          >
            View project →
          </a>
        </article>
      </div>
    </section>
  </section>
</div>
`;

exports[`Projects renders correctly with full project list 1`] = `
.c0 {
  padding-top: 6rem;
  padding-bottom: 6rem;
}

.c1 {
  display: grid;
  position: relative;
  min-height: auto;
  width: 100%;
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  column-gap: calc(24px);
}

.c1 >* {
  grid-column: 2/auto;
}

.c9 {
  display: flex;
  gap: 0.5rem;
  flex-wrap: wrap;
  margin-bottom: 1.5rem;
}

.c11 {
  color: #eebbc3;
  text-decoration: none;
  line-height: 1;
  transition: color 0.2s ease-in-out;
}

.c11:hover {
  color: #eebbc3;
}

.c11:focus {
  outline: 2px solid #eebbc3;
  outline-offset: 2px;
}

.c7 {
  color: #b8c1ec;
  font-size: 0.875rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c2 {
  font-size: 0.75rem;
  letter-spacing: 0.2em;
  text-transform: uppercase;
  color: #eebbc3;
  margin: 0 0 1.25rem;
}

.c3 {
  font-family: "Rainier",sans-serif;
  font-size: 2.5rem;
  font-weight: 700;
  color: #fffffe;
  line-height: 1.1;
  margin: 0 0 3rem;
  max-width: 600px;
}

.c4 {
  display: grid;
  grid-template-columns: 1fr;
  gap: 1.5rem;
}

.c5 {
  display: flex;
  flex-direction: column;
  padding: 2rem;
  border: 1px solid #b8c1ec;
  border-radius: 10px;
  transition: border-color 0.2s ease;
}

.c5:hover {
  border-color: #eebbc3;
}

.c6 {
  font-family: "Rainier",sans-serif;
  font-size: 1.25rem;
  font-weight: 700;
  color: #fffffe;
  margin: 0 0 0.75rem;
}

.c8 {
  margin-bottom: 1.5rem;
  flex: 1;
}

.c10 {
  font-size: 0.75rem;
  padding: 0.25rem 0.625rem;
  border: 1px solid #b8c1ec;
  color: #b8c1ec;
}

@media (min-width: 600px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
    column-gap: calc(24px);
  }
}

@media (min-width: 900px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
    column-gap: calc(36px);
  }
}

@media (min-width: 1200px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
    column-gap: calc(81px);
  }
}

@media (min-width: 1536px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
    column-gap: calc(121.5px);
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c3 {
    font-size: 3.5rem;
  }
}

@media (min-width: 900px) {
  .c4 {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media (min-width: 1536px) {
  .c4 {
    grid-template-columns: repeat(3, 1fr);
  }
}

<div>
  <section
    class="c0"
  >
    <section
      class="c1"
    >
      <p
        class="c2"
      >
        Projects
      </p>
      <h2
        class="c3"
      >
        What I've built
      </h2>
      <div
        class="c4"
      >
        <article
          class="c5"
        >
          <h3
            class="c6"
          >
            Petite Revery
          </h3>
          <p
            class="c7 c8"
            variant="small"
          >
            High-end fashion ecommerce built on Next.js and Shopify Storefront API. Custom product configurator, size guides, and a fully bespoke checkout experience.
          </p>
          <div
            class="c9"
          >
            <span
              class="c10"
            >
              Next.js
            </span>
            <span
              class="c10"
            >
              TypeScript
            </span>
            <span
              class="c10"
            >
              Shopify
            </span>
            <span
              class="c10"
            >
              styled-components
            </span>
          </div>
          <a
            aria-label="View project →"
            class="c11"
            href="https://petiterevery.com"
            rel="noopener noreferrer"
            tabindex="0"
            target="_blank"
          >
            View project →
          </a>
        </article>
        <article
          class="c5"
        >
          <h3
            class="c6"
          >
            7mesh Industries
          </h3>
          <p
            class="c7 c8"
            variant="small"
          >
            Performance cycling apparel brand. Headless Shopify storefront with custom collection filtering, Algolia search, and Storybook component library.
          </p>
          <div
            class="c9"
          >
            <span
              class="c10"
            >
              Next.js
            </span>
            <span
              class="c10"
            >
              TypeScript
            </span>
            <span
              class="c10"
            >
              Shopify
            </span>
            <span
              class="c10"
            >
              Algolia
            </span>
            <span
              class="c10"
            >
              Storybook
            </span>
          </div>
          <a
            aria-label="View project →"
            class="c11"
            href="https://7mesh.com"
            rel="noopener noreferrer"
            tabindex="0"
            target="_blank"
          >
            View project →
          </a>
        </article>
        <article
          class="c5"
        >
          <h3
            class="c6"
          >
            Nest Designs
          </h3>
          <p
            class="c7 c8"
            variant="small"
          >
            Baby and kids lifestyle brand. Shopify Plus storefront with subscription products, loyalty integration, and multi-currency support.
          </p>
          <div
            class="c9"
          >
            <span
              class="c10"
            >
              Next.js
            </span>
            <span
              class="c10"
            >
              TypeScript
            </span>
            <span
              class="c10"
            >
              Shopify Plus
            </span>
            <span
              class="c10"
            >
              Klaviyo
            </span>
          </div>
          <a
            aria-label="View project →"
            class="c11"
            href="https://nestdesigns.com"
            rel="noopener noreferrer"
            tabindex="0"
            target="_blank"
          >
            View project →
          </a>
        </article>
        <article
          class="c5"
        >
          <h3
            class="c6"
          >
            Videoland
          </h3>
          <p
            class="c7 c8"
            variant="small"
          >
            Dutch video streaming platform. Led frontend architecture for the React rewrite from a legacy codebase, delivering live sports, series, and films.
          </p>
          <div
            class="c9"
          >
            <span
              class="c10"
            >
              React
            </span>
            <span
              class="c10"
            >
              TypeScript
            </span>
            <span
              class="c10"
            >
              Redux
            </span>
            <span
              class="c10"
            >
              Jest
            </span>
          </div>
        </article>
        <article
          class="c5"
        >
          <h3
            class="c6"
          >
            Arfer
          </h3>
          <p
            class="c7 c8"
            variant="small"
          >
            B2B furniture configurator for architects and interior designers. Real-time 3D preview with a custom quote engine built on React and Three.js.
          </p>
          <div
            class="c9"
          >
            <span
              class="c10"
            >
              React
            </span>
            <span
              class="c10"
            >
              Three.js
            </span>
            <span
              class="c10"
            >
              TypeScript
            </span>
          </div>
        </article>
        <article
          class="c5"
        >
          <h3
            class="c6"
          >
            Sprintt Ceramica
          </h3>
          <p
            class="c7 c8"
            variant="small"
          >
            Ecommerce and product catalogue for an Italian ceramic tile manufacturer. Custom CMS integration and multi-language support.
          </p>
          <div
            class="c9"
          >
            <span
              class="c10"
            >
              React
            </span>
            <span
              class="c10"
            >
              Contentful
            </span>
            <span
              class="c10"
            >
              i18n
            </span>
          </div>
        </article>
      </div>
    </section>
  </section>
</div>
`;
